--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^8.0.0",
     "react-scripts": "4.0.3",
     "redux": "^4.2.0",
+    "redux-immutable": "^4.0.0",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.1",
     "semantic-ui-css": "^2.4.1",
