--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "email": "mariangelica.useche@gmail.com"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
